After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688961 - Fix gdk_window_get_origin() assertion in GdlDockMaster.
Fix gdk_window_get_origin() assertion in GdlDockMaster.
Status: RESOLVED FIXED
Product: gdl
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Anjuta maintainers
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-23 23:23 UTC by Carl-Anton Ingmarsson
Modified: 2012-11-24 09:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix gdk_window_get_origin() assertion in GdlDockMaster. (1.08 KB, patch)
2012-11-23 23:23 UTC, Carl-Anton Ingmarsson
committed Details | Review

Description Carl-Anton Ingmarsson 2012-11-23 23:23:13 UTC
See attached patch.
Comment 1 Carl-Anton Ingmarsson 2012-11-23 23:23:16 UTC
Created attachment 229747 [details] [review]
Fix gdk_window_get_origin() assertion in GdlDockMaster.

Fixes the following assertion in Anjuta
(lt-anjuta:2876): Gdk-CRITICAL **: gdk_window_get_origin: assertion `GDK_IS_WINDOW (window)' failed
Comment 2 Sébastien Granjoux 2012-11-24 09:24:22 UTC
Comment on attachment 229747 [details] [review]
Fix gdk_window_get_origin() assertion in GdlDockMaster.

Thank you for your patch. I have already seen these critical warnings but I haven't found it.