Fix gdk_window_get_origin() assertion in GdlDockMaster.

Fixes the following assertion in Anjuta
(lt-anjuta:2876): Gdk-CRITICAL **: gdk_window_get_origin: assertion `GDK_IS_WINDOW (window)' failed

https://bugzilla.gnome.org/show_bug.cgi?id=688961